# E-Commerce_Product_Assistant

./: .gitignore  main.py  pyproject.toml  requirements.txt  scrapper_ui.py
product_assistant/config/: config.yaml
product_assistant/etl/: data_ingestion.py  data_scrapper.py
product_assistant/evaluation/: ragas_eval.py
product_assistant/exception/: custom_exception.py
product_assistant/logger/: __init__.py
product_assistant/mcp_servers/: client.py  product_search_server.py
product_assistant/prompt_library/: prompts.py
product_assistant/retriever/: retrieval.py
product_assistant/router/: main.py
product_assistant/utils/: model_loader.py
product_assistant/workflow/: agentic_rag_workflow.py  agentic_rag_workflow_with_mcp_websearch.py  generation_workflow.py  workflow_class.py
