[build-system]
requires = ['setuptools>=80']
build-backend = 'setuptools.build_meta'

[project]
name = "e-commerce-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "streamlit>=1.50.0",
]
